--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ footer .product-container {
 footer .product-container div {
   flex: 1 1 200px;
 }
-.fake {
+.footer-image {
   box-shadow: 0px 5px 5px grey;
   padding-bottom: 1rem;
   background-color: #cccccc;
@@ -138,14 +138,14 @@ footer .product-container div p {
   }
 
   .flex-container {
-    overflow-x: scroll; /* Allow horizontal scroll if needed */
+    overflow-x: scroll;
     justify-content: flex-start;
     scrollbar-width: none;
     cursor: grabbing;
   }
 
   .item {
-    flex: 0 0 100%; /* Make each item full width */
+    flex: 0 0 100%;
     text-align: center;
   }
   .item p {
@@ -153,7 +153,6 @@ footer .product-container div p {
   }
 }
 
-/* Tablets: Show two images */
 @media (min-width: 481px) and (max-width: 853px) {
   .overlay {
     transform: translateY(-25%);
@@ -167,6 +166,6 @@ footer .product-container div p {
   }
 
   .item {
-    flex: 0 0 50%; /* Adjust to display two items per row */
+    flex: 0 0 50%;
   }
 }
